--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ height: 667px;
   /* background: #c75252; */
   padding: 0 24px;
   overflow: hidden;
-  background-image: url(./images/TodoTasks.svg);
+  background-image: url(./images/todo-tasks.png);
   background-repeat: no-repeat;
 }
 
