--- a/style.css
+++ b/style.css
@@ -1,131 +1,110 @@
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+padding: 0;
+margin: 0;
+box-sizing: border-box;
 }
-
-{font-family: 'Montserrat', sans-serif;
-
-font-family: 'Open Sans', sans-serif;
-
-font-family: 'Quicksand', sans-serif;}
 
 body {
-  background-image: url(./images/main-background.svg);
-/* overflow: hidden; */
-/* background-repeat: no-repeat; */
-/* height: 100% hv; */
-/* margin: auto; */
+background-image: url(./images/main-background.svg);
 }
+
 main {
-  /* background: radial-gradient(50% 50% at 50% 50%, #E02D6F 0%, #E8999F 100%);
-filter: blur(404px); */
-/* 
-background: linear-gradient(90deg, rgba(221, 94, 137, 0) 0%, rgba(247, 187, 151, 0) 100%); */
-
-
-/* background: linear-gradient(rgba(221, 94, 137, 1),rgba(247, 187, 151, 1));
-filter: blur(404px); */
 background-repeat: no-repeat;
 height: 100% hv;
-/* width: 100% vw; */
 }
 
 h1 {
-  margin: 24px 0 5px;
-
-  font-family: Montserrat;
+margin: 24px 0 5px;
+font-family: 'Montserrat', sans-serif;
 font-style: normal;
 font-weight: 600;
 font-size: 62px;
 line-height: 76px;
 text-align: center;
 color: #FFFFFF;
-/* border: 1px solid rgba(0, 0, 0, 0.2); */
 text-shadow: 4px 4px 14px rgba(0, 0, 0, 0.25);
 }
 
 section {
-  max-width: 1324px;
-  /* background-color: aqua; */
-  margin: auto;
-  /* background: radial-gradient(50% 50% at 50% 50%, #E02D6F 0%, #E8999F 100%);
-filter: blur(404px);
-transform: rotate(-34.04deg); */
+max-width: 1324px;
+margin: auto;
 background-image: url(./images/frame.svg);
-/* height: 886px; */
 }
+
 .flex-btwn {
-  display: flex;
-  justify-content: space-between;
-  }
+display: flex;
+justify-content: space-between;
+}
+
 .flex {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* align-content: center; */
+display: flex;
+align-items: center;
+justify-content: center;
 }
+
 .col-flex {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
 }
+
 img {
-  cursor: pointer;
-  width: 20px;
+cursor: pointer;
+width: 20px;
 }
+
 a {
-  text-decoration: none;
+text-decoration: none;
 }
+
 .left-section {
-  margin-top: 52px;
-  margin-left: 70px;
+margin-top: 52px;
+margin-left: 70px;
 }
 
 .logo {
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 32px;
-  line-height: 39px;
-  color: #FFFFFF;}
+font-family: 'Montserrat', sans-serif;
+font-style: normal;
+font-weight: normal;
+font-size: 32px;
+line-height: 39px;
+color: #FFFFFF;}
+
 .logoSp {
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 32px;
-    line-height: 39px;
-    color: #FFFFFF;}
+font-family: 'Montserrat', sans-serif;
+font-style: normal;
+font-weight: 600;
+font-size: 32px;
+line-height: 39px;
+color: #FFFFFF;}
 
 h2 {
-  margin: 134px 0 30px;
-  font-family: Montserrat;
+margin: 134px 0 30px;
+font-family: 'Montserrat', sans-serif;
 font-style: normal;
 font-weight: 600;
 font-size: 62px;
 line-height: 76px;
-
 color: #FFFFFF;
 }
+
 .todoP {
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 23.8756px;
-  line-height: 160.6%;
-  /* identical to box height, or 38px */
-  color: #FFFFFF;
+font-family: 'Montserrat', sans-serif;
+font-style: normal;
+font-weight: normal;
+font-size: 23.8756px;
+line-height: 160.6%;
+color: #FFFFFF;
 }
 
-
 .btn {
-    margin: 40px 0 100px 4px;
-    padding: 10px 32px;
-  background: #FFFFFF;
+margin: 40px 0 100px 4px;
+padding: 10px 32px;
+background: #FFFFFF;
 box-shadow: 4px 4px 14px rgba(228, 113, 142, 0.4);
 border-radius: 80px;
-font-family: Montserrat;
+font-family: 'Montserrat', sans-serif;
 font-style: normal;
 font-weight: 600;
 font-size: 20px;
@@ -134,285 +113,249 @@ color: #7556CD;
 width: 218px;
 }
 
-
-
-.btnSp {
-
-}
-
 .btn:hover {
-  width: 250px;
+width: 250px;
 }
+
 .scroll-arrow {
-  margin-top: 7px;
+margin-top: 7px;
 }
 
 .scroll-down {
-  font-family: Montserrat;
+font-family: 'Montserrat', sans-serif;
 font-style: normal;
 font-weight: normal;
 font-size: 23.8756px;
 line-height: 160.6%;
-/* identical to box height, or 38px */
-/* align-self: flex-start; */
-/* background-color: blueviolet; */
 max-width: 150px;
 margin-left: auto;
-
-
 color: #FFFFFF;
 }
+
 .scroll-down:hover .scroll-arrow{
-  margin-top: 30px;
+margin-top: 30px;
 }
+
 .hidden {
-  display: none;
+display: none;
 }
+
 .right-section {
-
-  margin: 129px 200px 42px 73px;
-  min-width: 375px;
-/* max-height: 667px; */
+margin: 129px 200px 42px 73px;
+min-width: 375px;
 height: 667px;
-  background: #FFFFFF;
-  /* background: #c75252; */
-  padding: 0 24px;
-  overflow: hidden;
-  background-image: url(./images/todo-tasks.png);
-  background-repeat: no-repeat;
+background: #FFFFFF;
+padding: 0 24px;
+overflow: hidden;
+background-image: url(./images/todo-tasks.png);
+background-repeat: no-repeat;
 }
 
-.top-section {
-  /* background-repeat: no-repeat; */ */
-
-  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.14);
-  /* padding: 24px; */
-}
 .add-and-search-icons {
-  height: 40px;
+height: 40px;
 margin-top: 20px;
 }
+
 .add-and-search-section {
 height: 40px;
 margin-top: 20px;
-/* background-color: aquamarine; */
 background: linear-gradient(180deg, rgba(255, 255, 255, 0.6) 0%, rgba(255, 255, 255, 0.276) 100%);
 backdrop-filter: blur(34px);
-/* Note: backdrop-filter has minimal browser support */
 padding: 5px 20px;
 border-radius: 8px;
-
 }
+
 .add-and-search {
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0.6) 0%, rgba(255, 255, 255, 0.276) 100%);
+background: linear-gradient(180deg, rgba(255, 255, 255, 0.6) 0%, rgba(255, 255, 255, 0.276) 100%);
 backdrop-filter: blur(34px);
-/* Note: backdrop-filter has minimal browser support */
-/* width: ; */
 border-radius: 8px;
 padding: 6px 6px 0 6px;
 margin: 20px 10px;
-
 }
-/* .search, .add {
 
-  width: 20px;
-} */
 .input {
-  border: none;
-  background-color: transparent;
-  font-family: Quicksand;
+border: none;
+background-color: transparent;
+font-family: 'Quicksand', sans-serif;
 font-style: normal;
 font-weight: 600;
 font-size: 17px;
 line-height: 21px;
-/* width: 100%; */
 color: #000000;
-
 text-shadow: 2px 2px 14px rgba(0, 0, 0, 0.15);
 }
 
 .input:focus{
-  outline: none;
+outline: none;
 }
 
 .submit-btn {
-  /* margin: 4px; */
-    /* padding: 0 10px; */
-  /* background: #FFFFFF; */
-/* box-shadow: 4px 4px 14px rgba(228, 113, 142, 0.4); */
-/* border-radius: 10px; */
-font-family: "Open Sans";
+font-family: "'Open Sans', sans-serif";
 font-style: normal;
 font-weight: 800;
 font-size: 14px;
-/* line-height: 15px; */
 height: 100%;
-/* identical to box height */
-/* color: transparent; */
 cursor: pointer;
 color: #0000004d;
 }
+
 .submit-btn:hover {
-  color: #000000;
+color: #fa3bb1;
+transform: scale(1.3);
 }
+
 .greeting {
-  margin-top: 10Px;
-  margin-bottom: 25px;
-  font-family: Quicksand;
+margin-top: 10Px;
+margin-bottom: 25px;
+font-family: 'Quicksand', sans-serif;
 font-style: normal;
 font-weight: 600;
 font-size: 28px;
 line-height: 37px;
-/* identical to box height */
 color: #FFFFFF;
 text-shadow: 2px 2px 14px rgba(0, 0, 0, 0.15);
-/* background-color: blue; */
 }
+
 .date {
-  font-style: normal;
+font-style: normal;
 font-weight: 600;
 font-size: 22px;
 line-height: 37px;
 margin-top: 5PX;
 }
-.note {
-  background: #FFFFFF;
-  box-shadow: 0px 4px 14px rgba(119, 187, 238, 0.25);
-  border-radius: 8px;
+
+.notes-message, .search-message {
+margin: 100px 0 100px;
+padding: 10px 42px;
+font-family: 'Montserrat', sans-serif;
+font-style: normal;
+font-weight: 600;
+font-size: 28px;
+line-height: 50px;
+color: #7556CD;
+width: 218px;
+text-align: center;
 width: 100%;
-/* width: 327px; */
+}
+
+.note {
+background: #FFFFFF;
+box-shadow: 0px 4px 14px rgba(119, 187, 238, 0.25);
+border-radius: 8px;
+width: 100%;
 padding: 20px;
 position: relative;
 margin-bottom: 17px;
 }
 
 .note::before {
-  content: "";
+content: "";
 height: 100%;
 width: 6px;
 background-color: #5551FF;
 border-radius: 8px 0 0 8px;
 position: absolute;
 left: 0;
-/* t op: 0; */
-
 }
 
 .task {
-  margin-left: 13px;
-  margin-right: auto;
-  font-family: "Open Sans";
+margin-left: 13px;
+margin-right: auto;
+font-family: "'Open Sans', sans-serif";
 font-style: normal;
 font-weight: normal;
 font-size: 14px;
 line-height: 19px;
-/* identical to box height */
 color: #3A3A3A;
 position: relative;
-/* border: 0.1px solid #202020; */
 cursor: pointer;
 }
 
 .line-through {
-  /* content: ""; */
-  background-color: #5551FF;
-  Width: 107%;
-Height : 1.5px;
+background-color: #5551FF;
+Width: 110%;
+Height : 2px;
 position: absolute;
-/* border-radius: 20%; */
 bottom: 38%;
-left: -5px;
-/* display: none; */
+left: -2px;
 }
 
 .done-icon {
-  width: 12px;
+width: 12px;
 position: absolute;
 left: 24px;
 bottom: 25.5px;
 }
 
 .delete-icon, .red-delete-icon {
-  margin-left: 4px;
+margin-left: 4px;
 }
 
 .modal {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 800px;
-  height: 400px;
-  /* max-width: 60rem; */
-  /* background-color: #3edac5d5; */
-  background-image: url(./images/modal-background.svg);
-  padding: 100px 150px;
-  box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.342);
-   z-index: 200;
-   font-family: Montserrat;
+position: fixed;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+width: 800px;
+height: 400px;
+background-image: url(./images/modal-background.svg);
+padding: 100px 150px;
+box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.342);
+z-index: 200;
+font-family: 'Montserrat', sans-serif;
 font-style: normal;
 font-weight: 600;
 font-size: 35px;
 line-height: 50px;
 color: #ffffff;
-/* width: 218px; */
-/* display: flex; */
-/* flex-direction: column; */
 }
 
 .modal-input {
-  font-family: Montserrat;
-  font-style: normal;
-  /* font-weight: 600; */
-  font-size: 35px;
-  /* line-height: 50px; */
-  color: #000000;
+font-family: 'Montserrat', sans-serif;
+font-style: normal;
+font-size: 35px;
+color: #000000;
 }
 
 .modal-btns {
-  /* grid-column: 1 / span 2; */
-  justify-self: center;
-  margin-top: 30px;
-  /* margin-left: 30px; */
-  /* display: flex; */
-  padding: 10px 15px;
-  font-family: Montserrat;
+justify-self: center;
+margin-top: 30px;
+padding: 10px 15px;
+font-family: 'Montserrat', sans-serif;
 font-style: normal;
-/* font-weight: 600; */
 font-size: 20px;
-/* line-height: 50px; */
 color: #000000;
 }
+
 .modal-btns:hover {
-  background-color:  #aa76af;
-/* background-image: url(./images/main-background.svg); */
-  /* border: none; */
-  border: 1px solid #aa76af;
-  border-radius: 5px;
+background-color:  #aa76af;
+border: 1px solid #aa76af;
+border-radius: 5px;
 }
+
 .close-modal {
-  position: absolute;
-  top: 20px;
-  right: 25px;
-  font-size: 50px;
-  cursor: pointer;
+position: absolute;
+top: 20px;
+right: 25px;
+font-size: 50px;
+cursor: pointer;
 }
+
 .close-modal:hover {
 transform: scale(1.5);
 }
-.update-btn {
-  font-weight: 600;
-}
-.overlay {
-  background-color: #000000;
- position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.65);
-  /* backdrop-filter: blur(40px); */
-  z-index: 100;
-  /* transition: all 0.5s; */
 
+.update-btn {
+font-weight: 600;
+}
+
+.overlay {
+background-color: #000000;
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background-color: rgba(0, 0, 0, 0.65);
+z-index: 100;
 }
