--- a/style.css
+++ b/style.css
@@ -1,361 +1,373 @@
 * {
-padding: 0;
-margin: 0;
-box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-background-image: url(./images/main-background.svg);
+  background-image: url(./images/main-background.svg);
 }
 
 main {
-background-repeat: no-repeat;
-height: 100% hv;
+  background-repeat: no-repeat;
+  height: 100% hv;
 }
 
 h1 {
-margin: 24px 0 5px;
-font-family: 'Montserrat', sans-serif;
-font-style: normal;
-font-weight: 600;
-font-size: 62px;
-line-height: 76px;
-text-align: center;
-color: #FFFFFF;
-text-shadow: 4px 4px 14px rgba(0, 0, 0, 0.25);
+  margin: 24px 0 5px;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 62px;
+  line-height: 76px;
+  text-align: center;
+  color: #ffffff;
+  text-shadow: 4px 4px 14px rgba(0, 0, 0, 0.25);
 }
 
 section {
-max-width: 1324px;
-margin: auto;
-background-image: url(./images/frame.svg);
+  max-width: 1324px;
+  margin: auto;
+  background-image: url(./images/frame.svg);
 }
 
 .flex-btwn {
-display: flex;
-justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .flex {
-display: flex;
-align-items: center;
-justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .col-flex {
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 img {
-cursor: pointer;
-width: 20px;
+  cursor: pointer;
+  width: 20px;
 }
 
 a {
-text-decoration: none;
+  text-decoration: none;
 }
 
 .left-section {
-margin-top: 52px;
-margin-left: 70px;
+  margin-top: 52px;
+  margin-left: 70px;
 }
 
 .logo {
-font-family: 'Montserrat', sans-serif;
-font-style: normal;
-font-weight: normal;
-font-size: 32px;
-line-height: 39px;
-color: #FFFFFF;}
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 32px;
+  line-height: 39px;
+  color: #ffffff;
+}
 
 .logoSp {
-font-family: 'Montserrat', sans-serif;
-font-style: normal;
-font-weight: 600;
-font-size: 32px;
-line-height: 39px;
-color: #FFFFFF;}
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 39px;
+  color: #ffffff;
+}
 
 h2 {
-margin: 134px 0 30px;
-font-family: 'Montserrat', sans-serif;
-font-style: normal;
-font-weight: 600;
-font-size: 62px;
-line-height: 76px;
-color: #FFFFFF;
+  margin: 134px 0 30px;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 62px;
+  line-height: 76px;
+  color: #ffffff;
 }
 
 .todoP {
-font-family: 'Montserrat', sans-serif;
-font-style: normal;
-font-weight: normal;
-font-size: 23.8756px;
-line-height: 160.6%;
-color: #FFFFFF;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 23.8756px;
+  line-height: 160.6%;
+  color: #ffffff;
 }
 
 .btn {
-margin: 40px 0 100px 4px;
-padding: 10px 32px;
-background: #FFFFFF;
-box-shadow: 4px 4px 14px rgba(228, 113, 142, 0.4);
-border-radius: 80px;
-font-family: 'Montserrat', sans-serif;
-font-style: normal;
-font-weight: 600;
-font-size: 20px;
-line-height: 24px;
-color: #7556CD;
-width: 218px;
+  margin: 40px 0 100px 4px;
+  padding: 10px 32px;
+  background: #ffffff;
+  box-shadow: 4px 4px 14px rgba(228, 113, 142, 0.4);
+  border-radius: 80px;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 24px;
+  color: #7556cd;
+  width: 218px;
 }
 
 .btn:hover {
-width: 250px;
+  width: 250px;
 }
 
 .scroll-arrow {
-margin-top: 7px;
+  margin-top: 7px;
 }
 
 .scroll-down {
-font-family: 'Montserrat', sans-serif;
-font-style: normal;
-font-weight: normal;
-font-size: 23.8756px;
-line-height: 160.6%;
-max-width: 150px;
-margin-left: auto;
-color: #FFFFFF;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 23.8756px;
+  line-height: 160.6%;
+  max-width: 150px;
+  margin-left: auto;
+  color: #ffffff;
 }
 
-.scroll-down:hover .scroll-arrow{
-margin-top: 30px;
+.scroll-down:hover .scroll-arrow {
+  margin-top: 30px;
 }
 
 .hidden {
-display: none;
+  display: none;
 }
 
 .right-section {
-margin: 129px 200px 42px 73px;
-min-width: 375px;
-height: 667px;
-background: #FFFFFF;
-padding: 0 24px;
-overflow: hidden;
-background-image: url(./images/todo-tasks.png);
-background-repeat: no-repeat;
+  margin: 129px 200px 42px 73px;
+  min-width: 375px;
+  height: 667px;
+  background: #ffffff;
+  padding: 0 24px;
+  overflow: hidden;
+  background-image: url(./images/todo-tasks.png);
+  background-repeat: no-repeat;
 }
 
 .add-and-search-icons {
-height: 40px;
-margin-top: 20px;
+  height: 40px;
+  margin-top: 20px;
 }
 
 .add-and-search-section {
-height: 40px;
-margin-top: 20px;
-background: linear-gradient(180deg, rgba(255, 255, 255, 0.6) 0%, rgba(255, 255, 255, 0.276) 100%);
-backdrop-filter: blur(34px);
-padding: 5px 20px;
-border-radius: 8px;
+  height: 40px;
+  margin-top: 20px;
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0.6) 0%,
+    rgba(255, 255, 255, 0.276) 100%
+  );
+  backdrop-filter: blur(34px);
+  padding: 5px 20px;
+  border-radius: 8px;
 }
 
 .add-and-search {
-background: linear-gradient(180deg, rgba(255, 255, 255, 0.6) 0%, rgba(255, 255, 255, 0.276) 100%);
-backdrop-filter: blur(34px);
-border-radius: 8px;
-padding: 6px 6px 0 6px;
-margin: 20px 10px;
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0.6) 0%,
+    rgba(255, 255, 255, 0.276) 100%
+  );
+  backdrop-filter: blur(34px);
+  border-radius: 8px;
+  padding: 6px 6px 0 6px;
+  margin: 20px 10px;
 }
 
 .input {
-border: none;
-background-color: transparent;
-font-family: 'Quicksand', sans-serif;
-font-style: normal;
-font-weight: 600;
-font-size: 17px;
-line-height: 21px;
-color: #000000;
-text-shadow: 2px 2px 14px rgba(0, 0, 0, 0.15);
+  border: none;
+  background-color: transparent;
+  font-family: 'Quicksand', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 17px;
+  line-height: 21px;
+  color: #000000;
+  text-shadow: 2px 2px 14px rgba(0, 0, 0, 0.15);
 }
 
-.input:focus{
-outline: none;
+.input:focus {
+  outline: none;
 }
 
 .submit-btn {
-font-family: "'Open Sans', sans-serif";
-font-style: normal;
-font-weight: 800;
-font-size: 14px;
-height: 100%;
-cursor: pointer;
-color: #0000004d;
+  font-family: "'Open Sans', sans-serif";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 14px;
+  height: 100%;
+  cursor: pointer;
+  color: #0000004d;
 }
 
 .submit-btn:hover {
-color: #fa3bb1;
-transform: scale(1.3);
+  color: #fa3bb1;
+  transform: scale(1.3);
 }
 
 .greeting {
-margin-top: 10Px;
-margin-bottom: 25px;
-font-family: 'Quicksand', sans-serif;
-font-style: normal;
-font-weight: 600;
-font-size: 28px;
-line-height: 37px;
-color: #FFFFFF;
-text-shadow: 2px 2px 14px rgba(0, 0, 0, 0.15);
+  margin-top: 10px;
+  margin-bottom: 25px;
+  font-family: 'Quicksand', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 37px;
+  color: #ffffff;
+  text-shadow: 2px 2px 14px rgba(0, 0, 0, 0.15);
 }
 
 .date {
-font-style: normal;
-font-weight: 600;
-font-size: 22px;
-line-height: 37px;
-margin-top: 5PX;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 37px;
+  margin-top: 5px;
 }
 
-.notes-message, .search-message {
-margin: 100px 0 100px;
-padding: 10px 42px;
-font-family: 'Montserrat', sans-serif;
-font-style: normal;
-font-weight: 600;
-font-size: 28px;
-line-height: 50px;
-color: #7556CD;
-width: 218px;
-text-align: center;
-width: 100%;
+.notes-message,
+.search-message {
+  margin: 100px 0 100px;
+  padding: 10px 42px;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 50px;
+  color: #7556cd;
+  width: 218px;
+  text-align: center;
+  width: 100%;
 }
 
 .note {
-background: #FFFFFF;
-box-shadow: 0px 4px 14px rgba(119, 187, 238, 0.25);
-border-radius: 8px;
-width: 100%;
-padding: 20px;
-position: relative;
-margin-bottom: 17px;
+  background: #ffffff;
+  box-shadow: 0px 4px 14px rgba(119, 187, 238, 0.25);
+  border-radius: 8px;
+  width: 100%;
+  padding: 20px;
+  position: relative;
+  margin-bottom: 17px;
 }
 
 .note::before {
-content: "";
-height: 100%;
-width: 6px;
-background-color: #5551FF;
-border-radius: 8px 0 0 8px;
-position: absolute;
-left: 0;
+  content: '';
+  height: 100%;
+  width: 6px;
+  background-color: #5551ff;
+  border-radius: 8px 0 0 8px;
+  position: absolute;
+  left: 0;
 }
 
 .task {
-margin-left: 13px;
-margin-right: auto;
-font-family: "'Open Sans', sans-serif";
-font-style: normal;
-font-weight: normal;
-font-size: 14px;
-line-height: 19px;
-color: #3A3A3A;
-position: relative;
-cursor: pointer;
+  margin-left: 13px;
+  margin-right: auto;
+  font-family: "'Open Sans', sans-serif";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 19px;
+  color: #3a3a3a;
+  position: relative;
+  cursor: pointer;
 }
 
 .line-through {
-background-color: #5551FF;
-Width: 110%;
-Height : 2px;
-position: absolute;
-bottom: 38%;
-left: -2px;
+  background-color: #5551ff;
+  width: 110%;
+  height: 2px;
+  position: absolute;
+  bottom: 38%;
+  left: -2px;
 }
 
 .done-icon {
-width: 12px;
-position: absolute;
-left: 24px;
-bottom: 25.5px;
+  width: 12px;
+  position: absolute;
+  left: 24px;
+  bottom: 25.5px;
 }
 
-.delete-icon, .red-delete-icon {
-margin-left: 4px;
+.delete-icon,
+.red-delete-icon {
+  margin-left: 4px;
 }
 
 .modal {
-position: fixed;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
-width: 800px;
-height: 400px;
-background-image: url(./images/modal-background.svg);
-padding: 100px 150px;
-box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.342);
-z-index: 200;
-font-family: 'Montserrat', sans-serif;
-font-style: normal;
-font-weight: 600;
-font-size: 35px;
-line-height: 50px;
-color: #ffffff;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 800px;
+  height: 400px;
+  background-image: url(./images/modal-background.svg);
+  padding: 100px 150px;
+  box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.342);
+  z-index: 200;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 35px;
+  line-height: 50px;
+  color: #ffffff;
 }
 
 .modal-input {
-font-family: 'Montserrat', sans-serif;
-font-style: normal;
-font-size: 35px;
-color: #000000;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-size: 35px;
+  color: #000000;
 }
 
 .modal-btns {
-justify-self: center;
-margin-top: 30px;
-padding: 10px 15px;
-font-family: 'Montserrat', sans-serif;
-font-style: normal;
-font-size: 20px;
-color: #000000;
+  justify-self: center;
+  margin-top: 30px;
+  padding: 10px 15px;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-size: 20px;
+  color: #000000;
 }
 
 .modal-btns:hover {
-background-color:  #aa76af;
-border: 1px solid #aa76af;
-border-radius: 5px;
+  background-color: #aa76af;
+  border: 1px solid #aa76af;
+  border-radius: 5px;
 }
 
 .close-modal {
-position: absolute;
-top: 20px;
-right: 25px;
-font-size: 50px;
-cursor: pointer;
+  position: absolute;
+  top: 20px;
+  right: 25px;
+  font-size: 50px;
+  cursor: pointer;
 }
 
 .close-modal:hover {
-transform: scale(1.5);
+  transform: scale(1.5);
 }
 
 .update-btn {
-font-weight: 600;
+  font-weight: 600;
 }
 
 .overlay {
-background-color: #000000;
-position: fixed;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-background-color: rgba(0, 0, 0, 0.65);
-z-index: 100;
+  background-color: #000000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.65);
+  z-index: 100;
 }
