--- a/style.css
+++ b/style.css
@@ -144,14 +144,29 @@ h2 {
 
 .right-section {
   margin: 129px 200px 42px 73px;
-  min-width: 375px;
+  min-width: 373px;
   height: 667px;
-  background: #ffffff;
-  padding: 0 24px;
-  overflow: hidden;
+  position: relative;
   background-image: url(./images/todo-tasks.png);
   background-repeat: no-repeat;
+  background-color: #ffffff;
 }
+
+.top-section {
+  padding: 0 24px;
+}
+
+.notes-section {
+  width: 100%;
+  height: 493px;
+    overflow: hidden;
+  background: transparent;
+  padding: 0 24px;
+  position: absolute;
+  bottom: 20;
+  overflow-y: auto;
+  scrollbar-width: none;
+  }
 
 .add-and-search-icons {
   height: 40px;
